--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="col-md-5 align-self-center">
                     <div class="text-start">
                         <h1 class="text-uppercase">
-                            La educación es un proceso complejo en la vida del ser humano
+                            La educación es un proceso complejo en la vida del ser humano,por la que se tiene que pasar 
                         </h1>
                         <p class="mt-3">
                             Apoyamos también la capacitación de más de 400 maestros y autoridades 
