--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                             <h6 class="fw-bold">
                                 Institución Educativa E-kids School
                             </h6>
-                            <p>Nuestro reto es lograr que todos los niños y niñas accedan a educación de calidad.</p>
+                            <p>Nuestro reto es lograr que todos los niños y niñas accedan a educación que ofrece la institucion de alta calidad.</p>
                         </div>
                     </div>
                     <div class="col-md-4 border-end">
